--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,7 @@
     "orientation": "any",
     "icons": [
         {
-            "src": "/assets/icon.svg",
+            "src": "assets/icon.svg",
             "sizes": "any"
         }
     ]
